Implement default repository configuration for GitHub MCP server, allowing issues and PRs to be referenced by number alone. Update cursor-mcp-config.json to include default owner and repo, enhance server methods to resolve repository defaults, and update USAGE.md with simplified usage examples and natural language interaction guidelines.

--- a/cursor-mcp-config.json
+++ b/cursor-mcp-config.json
@@ -3,10 +3,12 @@
     "github-dev-workflow": {
       "command": "node",
       "args": [
-        "/home/snarf/git/techanvil/mcp-dev-workflow/servers/github/index.js"
+        "/home/tom/git/techanvil/mcp-dev-workflow/servers/github/index.js"
       ],
       "env": {
-        "GITHUB_TOKEN": ""
+        "GITHUB_TOKEN": "",
+        "DEFAULT_GITHUB_OWNER": "google",
+        "DEFAULT_GITHUB_REPO": "site-kit-wp"
       }
     }
   }
