Add Google Workspace MCP server with tools for Google Docs integration, including document reading, metadata retrieval, and text search. Implement authentication methods (Service Account and OAuth2) and update documentation for setup and usage. Enhance .gitignore for sensitive files.

--- a/cursor-mcp-config.json
+++ b/cursor-mcp-config.json
@@ -10,6 +10,19 @@
         "DEFAULT_GITHUB_OWNER": "google",
         "DEFAULT_GITHUB_REPO": "site-kit-wp"
       }
+    },
+    "google-workspace": {
+      "command": "node",
+      "args": [
+        "/home/tom/git/techanvil/mcp-dev-workflow/servers/google-workspace/index.js"
+      ],
+      "env": {
+        "GOOGLE_SERVICE_ACCOUNT_KEY": "",
+        "GOOGLE_SERVICE_ACCOUNT_FILE": "",
+        "GOOGLE_CLIENT_ID": "",
+        "GOOGLE_CLIENT_SECRET": "",
+        "GOOGLE_TOKEN_FILE": ""
+      }
     }
   }
 }
