--- a/env.example
+++ b/env.example
@@ -2,4 +2,19 @@
 # Create at: https://github.com/settings/tokens
 # Required scopes for public repos: none (can be left empty)
 # Required scopes for private repos: repo
-GITHUB_TOKEN=your_github_token_here 
+GITHUB_TOKEN=your_github_token_here
+
+# Google Workspace Authentication
+# Option 1: Service Account (Recommended for server applications)
+# Create at: https://console.cloud.google.com/iam-admin/serviceaccounts
+# Download the JSON key and either:
+# A) Set the entire JSON content as GOOGLE_SERVICE_ACCOUNT_KEY
+GOOGLE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"..."}
+# B) Or set the path to the JSON file
+GOOGLE_SERVICE_ACCOUNT_FILE=/path/to/service-account-key.json
+
+# Option 2: OAuth2 (For personal use)
+# Create at: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your_client_id_here
+GOOGLE_CLIENT_SECRET=your_client_secret_here
+GOOGLE_TOKEN_FILE=.google-token.json
