Refactor Google authentication setup: move script to 'scripts' directory and update package.json path.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:github": "node servers/github/index.js",
     "start:google-workspace": "node servers/google-workspace/index.js",
-    "auth:google": "node google-auth-setup.js",
+    "auth:google": "node scripts/google-auth-setup.js",
     "test:setup": "node test-setup.js",
     "dev": "npm run start:github"
   },
