Add Figma MCP server implementation with tools for file access, component retrieval, and asset export. Introduce centralized configuration for multiple services, including GitHub and Google Workspace. Update environment setup and documentation for Figma integration.

--- a/env.example
+++ b/env.example
@@ -18,3 +18,13 @@ GOOGLE_SERVICE_ACCOUNT_FILE=/path/to/service-account-key.json
 GOOGLE_CLIENT_ID=your_client_id_here
 GOOGLE_CLIENT_SECRET=your_client_secret_here
 GOOGLE_TOKEN_FILE=.google-token.json
+
+# Figma API Access
+# Create at: https://www.figma.com/developers/api#access-tokens
+# Go to Account Settings > Personal Access Tokens
+FIGMA_ACCESS_TOKEN=figd_your_figma_token_here
+
+# Optional: Default Figma team and project for simplified commands
+# Find these IDs in Figma URLs or through the API
+DEFAULT_FIGMA_TEAM_ID=your_team_id_here
+DEFAULT_FIGMA_PROJECT_ID=your_project_id_here
