Add default GitHub owner and repo configuration to env.example and update servers.config.json to include new environment variables for GitHub integration.

--- a/env.example
+++ b/env.example
@@ -4,6 +4,11 @@
 # Required scopes for private repos: repo
 GITHUB_TOKEN=your_github_token_here
 
+# Default GitHub owner and repo for simplified commands
+# Find these in the GitHub repository URL
+DEFAULT_GITHUB_OWNER=your_github_owner_here
+DEFAULT_GITHUB_REPO=your_github_repo_here
+
 # Google Workspace Authentication
 # Option 1: Service Account (Recommended for server applications)
 # Create at: https://console.cloud.google.com/iam-admin/serviceaccounts
