Add Figma server configuration and enhance documentation for setup and usage. Include new environment variables, automated setup instructions, and detailed examples for Figma integration, ensuring clarity for users.

--- a/cursor-mcp-config.json
+++ b/cursor-mcp-config.json
@@ -19,6 +19,15 @@
         "GOOGLE_CLIENT_SECRET": "",
         "GOOGLE_TOKEN_FILE": ""
       }
+    },
+    "figma": {
+      "command": "node",
+      "args": ["/path/to/mcp-dev-workflow/servers/figma/index.js"],
+      "env": {
+        "FIGMA_ACCESS_TOKEN": "",
+        "DEFAULT_FIGMA_TEAM_ID": "",
+        "DEFAULT_FIGMA_PROJECT_ID": ""
+      }
     }
   }
 }
